tests/auto-gen/inputvalidation001/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of list. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:26:8--26:16
 22 | ------------------------------------
 23 | 
 24 | --- Non-Gen type ---
 25 | 
 26 | list : List Int
             ^^^^^^^^

Error: While processing right hand side of list'. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:29:17--29:25
 25 | 
 26 | list : List Int
 27 | list = deriveGen
 28 | 
 29 | list' : Fuel -> List Int
                      ^^^^^^^^

Error: While processing right hand side of y. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:32:5--32:17
 28 | 
 29 | list' : Fuel -> List Int
 30 | list' = deriveGen
 31 | 
 32 | y : Y Int String
          ^^^^^^^^^^^^

Error: While processing right hand side of y'. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:35:14--35:26
 31 | 
 32 | y : Y Int String
 33 | y = deriveGen
 34 | 
 35 | y' : Fuel -> Y Int String
                   ^^^^^^^^^^^^

Error: While processing right hand side of genY_noFuel_given. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:40:29--40:33
 36 | y' = deriveGen
 37 | 
 38 | --- No fuel argument ---
 39 | 
 40 | genY_noFuel_given : (a, b : Type) -> Gen $ Y a b
                                  ^^^^

Error: While processing right hand side of genY_noFuel_given'. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:43:22--43:25
 39 | 
 40 | genY_noFuel_given : (a, b : Type) -> Gen $ Y a b
 41 | genY_noFuel_given = deriveGen
 42 | 
 43 | genY_noFuel_given' : Int -> (a, b : Type) -> Gen $ Y a b
                           ^^^

Error: While processing right hand side of genY_noFuel_given''. Error during reflection: The first argument must be of type `Fuel`

ValidateInput:46:23--46:24
 42 | 
 43 | genY_noFuel_given' : Int -> (a, b : Type) -> Gen $ Y a b
 44 | genY_noFuel_given' = deriveGen
 45 | 
 46 | genY_noFuel_given'' : X -> (a, b : Type) -> Gen $ Y a b
                            ^

Error: While processing right hand side of genY_noFuel_mid. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:49:24--49:28
 45 | 
 46 | genY_noFuel_given'' : X -> (a, b : Type) -> Gen $ Y a b
 47 | genY_noFuel_given'' = deriveGen
 48 | 
 49 | genY_noFuel_mid : (b : Type) -> Gen (a ** Y a b)
                             ^^^^

Error: While processing right hand side of genY_noFuel_mid'. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:52:25--52:29
 48 | 
 49 | genY_noFuel_mid : (b : Type) -> Gen (a ** Y a b)
 50 | genY_noFuel_mid = deriveGen
 51 | 
 52 | genY_noFuel_mid' : (b : Type) -> Gen $ DPair {a = Type, p = \a => Y a b}
                              ^^^^

Error: While processing right hand side of genY_noFuel_gened. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:55:21--55:42
 51 | 
 52 | genY_noFuel_mid' : (b : Type) -> Gen $ DPair {a = Type, p = \a => Y a b}
 53 | genY_noFuel_mid' = deriveGen
 54 | 
 55 | genY_noFuel_gened : Gen (a ** b ** Y a b)
                          ^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genY_missplFuel_aft. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:60:31--60:35
 56 | genY_noFuel_gened = deriveGen
 57 | 
 58 | --- Misplaced fuel argument ---
 59 | 
 60 | genY_missplFuel_aft : (a, b : Type) -> Fuel -> Gen $ Y a b
                                    ^^^^

Error: While processing right hand side of genY_missplFuel_mid. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:63:28--63:32
 59 | 
 60 | genY_missplFuel_aft : (a, b : Type) -> Fuel -> Gen $ Y a b
 61 | genY_missplFuel_aft = deriveGen
 62 | 
 63 | genY_missplFuel_mid : (a : Type) -> Fuel -> (b : Type) -> Gen $ Y a b
                                 ^^^^

Error: While processing right hand side of genY_missplFuel_aft_imp. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:74:35--74:39
 70 | -- because even explicit setting type argument of `deriveGen` makes two signatures incompatible.
 71 | 
 72 | --- Misplaced + implicit fuel argument ---
 73 | 
 74 | genY_missplFuel_aft_imp : (a, b : Type) -> {_ : Fuel} -> Gen $ Y a b
                                        ^^^^

Error: While processing right hand side of genY_missplFuel_mid_imp. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:77:32--77:36
 73 | 
 74 | genY_missplFuel_aft_imp : (a, b : Type) -> {_ : Fuel} -> Gen $ Y a b
 75 | genY_missplFuel_aft_imp = deriveGen
 76 | 
 77 | genY_missplFuel_mid_imp : (a : Type) -> {_ : Fuel} -> (b : Type) -> Gen $ Y a b
                                     ^^^^

Error: While processing right hand side of genY_missplFuel_aft_autoimpl_imp. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:80:67--80:71
 76 | 
 77 | genY_missplFuel_mid_imp : (a : Type) -> {_ : Fuel} -> (b : Type) -> Gen $ Y a b
 78 | genY_missplFuel_mid_imp = deriveGen
 79 | 
 80 | genY_missplFuel_aft_autoimpl_imp : Gen X => {_ : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                                        ^^^^

Error: While processing right hand side of genY_unnamed_imp_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:85:47--85:51
 81 | genY_missplFuel_aft_autoimpl_imp = deriveGen
 82 | 
 83 | --- Implicit fuel argument ---
 84 | 
 85 | genY_unnamed_imp_fuel : {_ : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                    ^^^^

Error: While processing right hand side of genY_named_imp_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:88:45--88:49
 84 | 
 85 | genY_unnamed_imp_fuel : {_ : Fuel} -> (a, b : Type) -> Gen $ Y a b
 86 | genY_unnamed_imp_fuel = deriveGen
 87 | 
 88 | genY_named_imp_fuel : {f : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                  ^^^^

Error: While processing right hand side of genY_autoimp_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:91:37--91:41
 87 | 
 88 | genY_named_imp_fuel : {f : Fuel} -> (a, b : Type) -> Gen $ Y a b
 89 | genY_named_imp_fuel = deriveGen
 90 | 
 91 | genY_autoimp_fuel : Fuel => (a, b : Type) -> Gen $ Y a b
                                          ^^^^

Error: While processing right hand side of genY_defaulted_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:94:60--94:64
 90 | 
 91 | genY_autoimp_fuel : Fuel => (a, b : Type) -> Gen $ Y a b
 92 | genY_autoimp_fuel = deriveGen
 93 | 
 94 | genY_defaulted_fuel : {default Dry fuel : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                                 ^^^^

Error: While processing right hand side of genY_defaulted_fuel'. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:97:69--97:73
 93 | 
 94 | genY_defaulted_fuel : {default Dry fuel : Fuel} -> (a, b : Type) -> Gen $ Y a b
 95 | genY_defaulted_fuel = deriveGen
 96 | 
 97 | genY_defaulted_fuel' : {default (limit 120) fuel : Fuel} -> (a, b : Type) -> Gen $ Y a b
                                                                          ^^^^

Error: While processing right hand side of genY_exp_named_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:102:31--102:35
 098 | genY_defaulted_fuel' = deriveGen
 099 | 
 100 | --- Named explicit fuel ---
 101 | 
 102 | genY_exp_named_fuel : (fuel : Fuel) -> (a, b : Type) -> Gen $ Y a b
                                     ^^^^

Error: While processing right hand side of genY_with_unrelated. Error during reflection: Generated parameter is not used in the target type

ValidateInput:107:66--107:69
 103 | genY_exp_named_fuel = deriveGen
 104 | 
 105 | --- Unrelated stuff in the resulting dpair ---
 106 | 
 107 | genY_with_unrelated : Fuel -> (a : Type) -> Gen (b : Type ** n : Nat ** Y a b)
                                                                        ^^^

Error: While processing right hand side of genY_with_repeating_name_equityped. Error during reflection: Argument of dependent pair under the resulting `Gen` must be named

ValidateInput:110:60--110:95
 106 | 
 107 | genY_with_unrelated : Fuel -> (a : Type) -> Gen (b : Type ** n : Nat ** Y a b)
 108 | genY_with_unrelated = deriveGen
 109 | 
 110 | genY_with_repeating_name_equityped : Fuel -> (a : Type) -> Gen (b : Type ** b : Type ** Y a b)
                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing type of genY_with_repeating_name_difflytyped. When unifying Nat and Type.
Mismatch between: Nat and Type.

ValidateInput:113:94--113:95
 109 | 
 110 | genY_with_repeating_name_equityped : Fuel -> (a : Type) -> Gen (b : Type ** b : Type ** Y a b)
 111 | genY_with_repeating_name_equityped = deriveGen
 112 | 
 113 | genY_with_repeating_name_difflytyped : Fuel -> (a : Type) -> Gen (b : Type ** b : Nat ** Y a b)
                                                                                                    ^

Error: No type declaration for ValidateInput.genY_with_repeating_name_difflytyped.

ValidateInput:114:1--114:49
 110 | genY_with_repeating_name_equityped : Fuel -> (a : Type) -> Gen (b : Type ** b : Type ** Y a b)
 111 | genY_with_repeating_name_equityped = deriveGen
 112 | 
 113 | genY_with_repeating_name_difflytyped : Fuel -> (a : Type) -> Gen (b : Type ** b : Nat ** Y a b)
 114 | genY_with_repeating_name_difflytyped = deriveGen
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Did you mean: genY_with_repeating_name_equityped?
Error: While processing right hand side of genY_with_repeating_name_difflytyped'. When unifying Nat and Type.
Mismatch between: Nat and Type.

ValidateInput:116:79--116:87
 112 | 
 113 | genY_with_repeating_name_difflytyped : Fuel -> (a : Type) -> Gen (b : Type ** b : Nat ** Y a b)
 114 | genY_with_repeating_name_difflytyped = deriveGen
 115 | 
 116 | genY_with_repeating_name_difflytyped' : Fuel -> (a : Type) -> Gen (b : Nat ** b : Type ** Y a b)
                                                                                     ^^^^^^^^

Error: While processing right hand side of genOfGens. Error during reflection: Target type of a derived `Gen` cannot be a `Gen`

ValidateInput:121:27--121:32
 117 | genY_with_repeating_name_difflytyped' = deriveGen
 118 | 
 119 | --- Gen of strange things ---
 120 | 
 121 | genOfGens : Fuel -> Gen $ Gen X
                                 ^^^^^

Error: While processing right hand side of genOfLazies. Error during reflection: Target type is not a simple name

ValidateInput:124:29--124:35
 120 | 
 121 | genOfGens : Fuel -> Gen $ Gen X
 122 | genOfGens = deriveGen
 123 | 
 124 | genOfLazies : Fuel -> Gen $ Lazy X
                                   ^^^^^^

Error: While processing right hand side of genOfInfs. Error during reflection: Target type is not a simple name

ValidateInput:127:27--127:32
 123 | 
 124 | genOfLazies : Fuel -> Gen $ Lazy X
 125 | genOfLazies = deriveGen
 126 | 
 127 | genOfInfs : Fuel -> Gen $ Inf X
                                 ^^^^^

Error: While processing right hand side of genOfDPair. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:130:25--130:27
 126 | 
 127 | genOfInfs : Fuel -> Gen $ Inf X
 128 | genOfInfs = deriveGen
 129 | 
 130 | genOfDPair : Fuel -> (a ** b ** Gen $ Y a b)
                               ^^

Error: While processing right hand side of genOfPair. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:133:39--133:51
 129 | 
 130 | genOfDPair : Fuel -> (a ** b ** Gen $ Y a b)
 131 | genOfDPair = deriveGen
 132 | 
 133 | genOfPair : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen (Y a b))
                                             ^^^^^^^^^^^^

Error: While processing right hand side of genOfPair'. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:136:40--136:52
 132 | 
 133 | genOfPair : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen (Y a b))
 134 | genOfPair = deriveGen
 135 | 
 136 | genOfPair' : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen X)
                                              ^^^^^^^^^^^^

Error: While processing right hand side of genOfFuns_pur. Error during reflection: Target type is not a simple name

ValidateInput:139:32--139:33
 135 | 
 136 | genOfPair' : Fuel -> (a, b : Type) -> (Gen (Y a b), Gen X)
 137 | genOfPair' = deriveGen
 138 | 
 139 | genOfFuns_pur : Fuel -> Gen $ (a : Type) -> (b : Type) -> Y a b
                                      ^

Error: While processing right hand side of genOfFuns_pur0s. Error during reflection: Target type is not a simple name

ValidateInput:142:36--142:37
 138 | 
 139 | genOfFuns_pur : Fuel -> Gen $ (a : Type) -> (b : Type) -> Y a b
 140 | genOfFuns_pur = deriveGen
 141 | 
 142 | genOfFuns_pur0s : Fuel -> Gen $ (0 a : Type) -> (0 b : Type) -> Y a b
                                          ^

Error: While processing right hand side of genOfFuns_pur1s. Error during reflection: Target type is not a simple name

ValidateInput:145:36--145:37
 141 | 
 142 | genOfFuns_pur0s : Fuel -> Gen $ (0 a : Type) -> (0 b : Type) -> Y a b
 143 | genOfFuns_pur0s = deriveGen
 144 | 
 145 | genOfFuns_pur1s : Fuel -> Gen $ (1 a : Type) -> (1 b : Type) -> Y a b
                                          ^

Error: While processing right hand side of genOfFuns_ins_pair. Error during reflection: Target type is not a simple name

ValidateInput:148:42--148:43
 144 | 
 145 | genOfFuns_pur1s : Fuel -> Gen $ (1 a : Type) -> (1 b : Type) -> Y a b
 146 | genOfFuns_pur1s = deriveGen
 147 | 
 148 | genOfFuns_ins_pair : Fuel -> Gen (a ** ((b : Type) -> Y a b))
                                                ^

Error: While processing right hand side of genOfFuns_ins_pair0. Error during reflection: Target type is not a simple name

ValidateInput:151:45--151:46
 147 | 
 148 | genOfFuns_ins_pair : Fuel -> Gen (a ** ((b : Type) -> Y a b))
 149 | genOfFuns_ins_pair = deriveGen
 150 | 
 151 | genOfFuns_ins_pair0 : Fuel -> Gen (a ** ((0 b : Type) -> Y a b))
                                                   ^

Error: While processing right hand side of genOfFuns_ins_pair1. Error during reflection: Target type is not a simple name

ValidateInput:154:45--154:46
 150 | 
 151 | genOfFuns_ins_pair0 : Fuel -> Gen (a ** ((0 b : Type) -> Y a b))
 152 | genOfFuns_ins_pair0 = deriveGen
 153 | 
 154 | genOfFuns_ins_pair1 : Fuel -> Gen (a ** ((1 b : Type) -> Y a b))
                                                   ^

Error: While processing right hand side of genOfFuns_out_pair. Error during reflection: Target type is not a simple name

ValidateInput:157:37--157:38
 153 | 
 154 | genOfFuns_ins_pair1 : Fuel -> Gen (a ** ((1 b : Type) -> Y a b))
 155 | genOfFuns_ins_pair1 = deriveGen
 156 | 
 157 | genOfFuns_out_pair : Fuel -> Gen $ (b : Type) -> (a ** Y a b)
                                           ^

Error: While processing right hand side of genOfFuns_out_pair0. Error during reflection: Target type is not a simple name

ValidateInput:160:40--160:41
 156 | 
 157 | genOfFuns_out_pair : Fuel -> Gen $ (b : Type) -> (a ** Y a b)
 158 | genOfFuns_out_pair = deriveGen
 159 | 
 160 | genOfFuns_out_pair0 : Fuel -> Gen $ (0 b : Type) -> (a ** Y a b)
                                              ^

Error: While processing right hand side of genOfFuns_out_pair1. Error during reflection: Target type is not a simple name

ValidateInput:163:40--163:41
 159 | 
 160 | genOfFuns_out_pair0 : Fuel -> Gen $ (0 b : Type) -> (a ** Y a b)
 161 | genOfFuns_out_pair0 = deriveGen
 162 | 
 163 | genOfFuns_out_pair1 : Fuel -> Gen $ (1 b : Type) -> (a ** Y a b)
                                              ^

Error: While processing right hand side of genY_Int. Error during reflection: Target type's argument must be a variable name

ValidateInput:170:44--170:47
 166 | -- TODO to add more type that cannot be said as "pure types inside a `Gen`", if needed.
 167 | 
 168 | --- Non-variable arguments of the target type ---
 169 | 
 170 | genY_Int : Fuel -> (a : Type) -> Gen $ Y a Int
                                                  ^^^

Error: While processing right hand side of genY_same_param. Error during reflection: All arguments of the target type must be different

ValidateInput:173:47--173:52
 169 | 
 170 | genY_Int : Fuel -> (a : Type) -> Gen $ Y a Int
 171 | genY_Int = deriveGen
 172 | 
 173 | genY_same_param : Fuel -> (a : Type) -> Gen $ Y a a
                                                     ^^^^^

Error: While processing right hand side of genY_given_zero_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:178:31--178:35
 174 | genY_same_param = deriveGen
 175 | 
 176 | --- Unexpected zero and linear arguments ---
 177 | 
 178 | genY_given_zero_fuel : (0 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
                                     ^^^^

Error: While processing right hand side of genY_given_zero_arg1. Error during reflection: Erased arguments are not supported in generator function signatures

ValidateInput:181:39--181:43
 177 | 
 178 | genY_given_zero_fuel : (0 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
 179 | genY_given_zero_fuel = deriveGen
 180 | 
 181 | genY_given_zero_arg1 : Fuel -> (0 a : Type) -> (b : Type) -> Gen $ Y a b
                                             ^^^^

Error: While processing right hand side of genY_given_zero_args. Error during reflection: Erased arguments are not supported in generator function signatures

ValidateInput:184:42--184:46
 180 | 
 181 | genY_given_zero_arg1 : Fuel -> (0 a : Type) -> (b : Type) -> Gen $ Y a b
 182 | genY_given_zero_arg1 = deriveGen
 183 | 
 184 | genY_given_zero_args : Fuel -> (0 a, b : Type) -> Gen $ Y a b
                                                ^^^^

Error: While processing right hand side of genY_given_lin_fuel. Error during reflection: The first argument must be explicit, unnamed, present at runtime and of type `Fuel`

ValidateInput:187:30--187:34
 183 | 
 184 | genY_given_zero_args : Fuel -> (0 a, b : Type) -> Gen $ Y a b
 185 | genY_given_zero_args = deriveGen
 186 | 
 187 | genY_given_lin_fuel : (1 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
                                    ^^^^

Error: While processing right hand side of genY_given_lin_arg1. Error during reflection: Linear arguments are not supported in generator function signatures

ValidateInput:190:38--190:42
 186 | 
 187 | genY_given_lin_fuel : (1 _ : Fuel) -> (a, b : Type) -> Gen $ Y a b
 188 | genY_given_lin_fuel = deriveGen
 189 | 
 190 | genY_given_lin_arg1 : Fuel -> (1 a : Type) -> (b : Type) -> Gen $ Y a b
                                            ^^^^

Error: While processing right hand side of genY_given_lin_args. Error during reflection: Linear arguments are not supported in generator function signatures

ValidateInput:193:41--193:45
 189 | 
 190 | genY_given_lin_arg1 : Fuel -> (1 a : Type) -> (b : Type) -> Gen $ Y a b
 191 | genY_given_lin_arg1 = deriveGen
 192 | 
 193 | genY_given_lin_args : Fuel -> (1 a, b : Type) -> Gen $ Y a b
                                               ^^^^

Error: While processing right hand side of genY_given_zero_lin_args. Error during reflection: Erased arguments are not supported in generator function signatures

ValidateInput:196:43--196:47
 192 | 
 193 | genY_given_lin_args : Fuel -> (1 a, b : Type) -> Gen $ Y a b
 194 | genY_given_lin_args = deriveGen
 195 | 
 196 | genY_given_zero_lin_args : Fuel -> (0 a : Type) -> (1 b : Type) -> Gen $ Y a b
                                                 ^^^^

Error: While processing right hand side of genVoid. Error during reflection: No constructors found for the type `Builtin.Void`

ValidateInput:202:11--202:20
 198 | 
 199 | --- Gen for type with no constructors ---
 200 | 
 201 | genVoid : Fuel -> Gen Void
 202 | genVoid = deriveGen
                 ^^^^^^^^^

Error: While processing right hand side of genY_repX_autoimpl. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:206:62--206:63
 202 | genVoid = deriveGen
 203 | 
 204 | --- Repeating external gens ---
 205 | 
 206 | genY_repX_autoimpl : Fuel -> (Fuel -> Gen X) => (Fuel -> Gen X) => (a, b : Type) -> Gen $ Y a b
                                                                    ^

Error: While processing right hand side of genY_nongen_autoimpl_list. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:211:46--211:54
 207 | genY_repX_autoimpl = deriveGen
 208 | 
 209 | --- Non-gen externals ---
 210 | 
 211 | genY_nongen_autoimpl_list : Fuel -> (Fuel -> List Int) => (a, b : Type) -> Gen $ Y a b
                                                    ^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_pair. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:214:38--214:52
 210 | 
 211 | genY_nongen_autoimpl_list : Fuel -> (Fuel -> List Int) => (a, b : Type) -> Gen $ Y a b
 212 | genY_nongen_autoimpl_list = deriveGen
 213 | 
 214 | genY_nongen_autoimpl_pair : Fuel -> (Fuel -> Gen X, Fuel -> Gen X') => (a, b : Type) -> Gen $ Y a b
                                            ^^^^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_dpair. Error during reflection: The result type of the generator function must be of type "`Gen` of desired result"

ValidateInput:217:50--217:52
 213 | 
 214 | genY_nongen_autoimpl_pair : Fuel -> (Fuel -> Gen X, Fuel -> Gen X') => (a, b : Type) -> Gen $ Y a b
 215 | genY_nongen_autoimpl_pair = deriveGen
 216 | 
 217 | genY_nongen_autoimpl_dpair : Fuel -> (Fuel -> (a ** b ** Gen $ Y a b)) => (a, b : Type) -> Gen $ Y a b
                                                        ^^

Error: While processing right hand side of genY_nongen_autoimpl_list_nofuel. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:222:44--222:52
 218 | genY_nongen_autoimpl_dpair = deriveGen
 219 | 
 220 | --- Externals with no fuel ---
 221 | 
 222 | genY_nongen_autoimpl_list_nofuel : Fuel -> List Int => (a, b : Type) -> Gen $ Y a b
                                                  ^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_pair_nofuel. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:225:45--225:51
 221 | 
 222 | genY_nongen_autoimpl_list_nofuel : Fuel -> List Int => (a, b : Type) -> Gen $ Y a b
 223 | genY_nongen_autoimpl_list_nofuel = deriveGen
 224 | 
 225 | genY_nongen_autoimpl_pair_nofuel : Fuel -> (Gen X, Gen X') => (a, b : Type) -> Gen $ Y a b
                                                   ^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_dpair_nofuel. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:228:48--228:50
 224 | 
 225 | genY_nongen_autoimpl_pair_nofuel : Fuel -> (Gen X, Gen X') => (a, b : Type) -> Gen $ Y a b
 226 | genY_nongen_autoimpl_pair_nofuel = deriveGen
 227 | 
 228 | genY_nongen_autoimpl_dpair_nofuel : Fuel -> (a ** b ** Gen $ Y a b) => (a, b : Type) -> Gen $ Y a b
                                                      ^^

Error: While processing right hand side of genY_require_self_autoimpl. Error during reflection: External generators contain the generator asked to be derived

ValidateInput:233:83--233:86
 229 | genY_nongen_autoimpl_dpair_nofuel = deriveGen
 230 | 
 231 | --- Result is alteady in externals ---
 232 | 
 233 | genY_require_self_autoimpl : Fuel -> (Fuel -> Gen X) => (Fuel -> (a, b : Type) -> Gen $ Y a b) => (a, b : Type) -> Gen $ Y a b
                                                                                         ^^^

Error: While processing right hand side of genY_autoimpl_in_autoimpl. Error during reflection: Auto-implicit argument should not contain its own auto-implicit arguments

ValidateInput:238:102--238:105
 234 | genY_require_self_autoimpl = deriveGen
 235 | 
 236 | --- Auto-implicits are present inside auto-implicits ---
 237 | 
 238 | genY_autoimpl_in_autoimpl : Fuel -> (Fuel -> (Fuel -> (a, b : Type) -> Gen $ Y a b) => (a : Type) -> Gen (b ** Y a b)) => Gen (a ** b ** Y a b)
                                                                                                            ^^^

Error: While processing right hand side of genY_unused_argument. Error during reflection: Given parameter is not used in the target type

ValidateInput:247:54--247:57
 243 | -- TODO to add if it is needed
 244 | 
 245 | --- Not all arguments are used ---
 246 | 
 247 | genY_unused_argument : Fuel -> (a, b : Type) -> (c : Nat) -> Gen $ Y a b
                                                            ^^^

Error: While processing right hand side of genY_wrong_giv_order. Error during reflection: Given arguments must go in the same order as in the target type

ValidateInput:252:40--252:44
 248 | genY_unused_argument = deriveGen
 249 | 
 250 | --- Wrong order of parameters ---
 251 | 
 252 | genY_wrong_giv_order : Fuel -> (b, a : Type) -> Gen $ Y a b
                                              ^^^^

Error: While processing right hand side of genX_wrong_giv_order_autoimpl. Error during reflection: Given arguments must go in the same order as in the target type

ValidateInput:255:58--255:62
 251 | 
 252 | genY_wrong_giv_order : Fuel -> (b, a : Type) -> Gen $ Y a b
 253 | genY_wrong_giv_order = deriveGen
 254 | 
 255 | genX_wrong_giv_order_autoimpl : Fuel -> (Fuel -> (b, a : Type) -> Gen $ Y a b) => Gen X
                                                                ^^^^

Error: While processing right hand side of genX_wrong_giv_order_autoimpl_rep. Error during reflection: Given arguments must go in the same order as in the target type

ValidateInput:258:62--258:66
 254 | 
 255 | genX_wrong_giv_order_autoimpl : Fuel -> (Fuel -> (b, a : Type) -> Gen $ Y a b) => Gen X
 256 | genX_wrong_giv_order_autoimpl = deriveGen
 257 | 
 258 | genX_wrong_giv_order_autoimpl_rep : Fuel -> (Fuel -> (b, a : Type) -> Gen $ Y a b) => (Fuel -> (a, b : Type) -> Gen $ Y a b) => Gen X
                                                                    ^^^^

Error: While processing right hand side of genY_wrong_gened_order. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:261:55--261:59
 257 | 
 258 | genX_wrong_giv_order_autoimpl_rep : Fuel -> (Fuel -> (b, a : Type) -> Gen $ Y a b) => (Fuel -> (a, b : Type) -> Gen $ Y a b) => Gen X
 259 | genX_wrong_giv_order_autoimpl_rep = deriveGen
 260 | 
 261 | genY_wrong_gened_order : Fuel -> Gen (b : Type ** a : Type ** Y a b)
                                                             ^^^^

Error: While processing right hand side of genY_wrong_gened_order'. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:17:10--17:14
 13 | data X = MkX
 14 | 
 15 | data X' = MkX'
 16 | 
 17 | data Y : Type -> Type -> Type where
               ^^^^

Error: While processing right hand side of genX_wrong_gened_order_autoimpl. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:267:73--267:77
 263 | 
 264 | genY_wrong_gened_order' : Fuel -> Gen (b ** a ** Y a b)
 265 | genY_wrong_gened_order' = deriveGen
 266 | 
 267 | genX_wrong_gened_order_autoimpl : Fuel -> (Fuel -> Gen (b : Type ** a : Type ** Y a b)) => Gen X
                                                                               ^^^^

Error: While processing right hand side of genX_wrong_gened_order_autoimpl_rep. Error during reflection: Generated arguments must go in the same order as in the target type

ValidateInput:270:77--270:81
 266 | 
 267 | genX_wrong_gened_order_autoimpl : Fuel -> (Fuel -> Gen (b : Type ** a : Type ** Y a b)) => Gen X
 268 | genX_wrong_gened_order_autoimpl = deriveGen
 269 | 
 270 | genX_wrong_gened_order_autoimpl_rep : Fuel -> (Fuel -> Gen (b : Type ** a : Type ** Y a b)) => (Fuel -> Gen (a : Type ** b : Type ** Y a b)) => Gen X
                                                                                   ^^^^

